# k8s-datamodels

./: LICENSE  README.md  pyproject.toml  test.py
src/: test.py
src/k8s_datamodels/api/admissionregistration/: v1.py
src/k8s_datamodels/api/apiserverinternal/: v1alpha1.py
src/k8s_datamodels/api/apps/: __init__.py  v1.py
src/k8s_datamodels/api/authentication/: v1.py
src/k8s_datamodels/api/authorization/: v1.py
src/k8s_datamodels/api/autoscaling/: v1.py  v2.py  v2beta1.py  v2beta2.py
src/k8s_datamodels/api/batch/: v1.py  v1beta1.py
src/k8s_datamodels/api/certificates/: v1.py
src/k8s_datamodels/api/coordination/: v1.py
src/k8s_datamodels/api/core/: v1.py
src/k8s_datamodels/api/discovery/: v1.py  v1beta1.py
src/k8s_datamodels/api/events/: v1.py  v1beta1.py
src/k8s_datamodels/api/flowcontrol/: v1beta1.py  v1beta2.py
src/k8s_datamodels/api/networking/: v1.py
src/k8s_datamodels/api/node/: v1.py  v1beta1.py
src/k8s_datamodels/api/policy/: v1.py  v1beta1.py
src/k8s_datamodels/api/rbac/: v1.py
src/k8s_datamodels/api/scheduling/: v1.py
src/k8s_datamodels/api/storage/: v1.py  v1beta1.py
src/k8s_datamodels/apiextensions_apiserver/pkg/apis/apiextensions/: v1.py
src/k8s_datamodels/apimachinery/pkg/: runtime.py  version.py
src/k8s_datamodels/apimachinery/pkg/api/: resource.py
src/k8s_datamodels/apimachinery/pkg/apis/meta/: v1.py
src/k8s_datamodels/apimachinery/pkg/util/: intstr.py
src/k8s_datamodels/kube_aggregator/pkg/apis/apiregistration/: __init__.py  v1.py
